# Malicious-Models

./: README.md  malicious_model.h5  malicious_model.keras  malicious_model.onnx  malicious_model0_lightgbm.pkl  malicious_model_lightgbm.pkl  malicious_model_pytorch.pth  malicious_model_scikit.pkl  malicious_model_torchscript.pt  malicious_model_xgboost.pkl  simple_model.onnx
mm-lightgbm/: load_model.py  malicious_model.pkl  malicious_model0_lightgbm.pkl  malicious_model1_lightgbm.pkl  malicious_model2_lightgbm.pkl  requirements.txt  save_model0.py  save_model1.py  save_model2.py
mm-scikit-learn/: load_model.py  save_model.py
mm-xgboost/: load_model.py  save_model.py
onnx-mm/: CMakeLists.txt  add_custom_operator.cpp  combine_op_and_model.py  custom_op.cpp  custom_op.h  custom_op_library.cpp  embed_malicious_code.py  load_and_run_model.py  load_model.cpp  load_model.py  save_model.py
pytorch-mm/: load_model.py  save_model.py
tensorflow-keras--mm/: load_model.py
tensorflow-torchscript-mm/: load_model.py  malicious_model.py  save_model.py
